[gd_scene load_steps=26 format=3 uid="uid://bkj6hno50ffd4"]

[ext_resource type="Script" path="res://scripts/character_body_2d.gd" id="1_pqx6u"]
[ext_resource type="Texture2D" uid="uid://b8cmjj8vq3r8d" path="res://assets/sprites/knight.png" id="2_rdml7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f2x78"]
radius = 5.0
height = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_jagkw"]
atlas = ExtResource("2_rdml7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_06jpo"]
atlas = ExtResource("2_rdml7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1xxk"]
atlas = ExtResource("2_rdml7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3pgu"]
atlas = ExtResource("2_rdml7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w27w"]
atlas = ExtResource("2_rdml7")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1y7l"]
atlas = ExtResource("2_rdml7")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c3d1"]
atlas = ExtResource("2_rdml7")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq42p"]
atlas = ExtResource("2_rdml7")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ird53"]
atlas = ExtResource("2_rdml7")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsabf"]
atlas = ExtResource("2_rdml7")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5dg0"]
atlas = ExtResource("2_rdml7")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewl44"]
atlas = ExtResource("2_rdml7")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yya8"]
atlas = ExtResource("2_rdml7")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfp4r"]
atlas = ExtResource("2_rdml7")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mp35"]
atlas = ExtResource("2_rdml7")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_030k1"]
atlas = ExtResource("2_rdml7")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypgq7"]
atlas = ExtResource("2_rdml7")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6clw"]
atlas = ExtResource("2_rdml7")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a505w"]
atlas = ExtResource("2_rdml7")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aedqs"]
atlas = ExtResource("2_rdml7")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke0jg"]
atlas = ExtResource("2_rdml7")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_q30uw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jagkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06jpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1xxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3pgu")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w27w")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1y7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c3d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dq42p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ird53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsabf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5dg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewl44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yya8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfp4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mp35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_030k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypgq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6clw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a505w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aedqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke0jg")
}],
"loop": true,
"name": &"walking",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D"]
z_index = 5
position = Vector2(100, 200)
script = ExtResource("1_pqx6u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_f2x78")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_q30uw")
animation = &"walking"
autoplay = "idle"

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="Doubletaptimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Dashtimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashCooldowntimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="Doubletaptimer" to="." method="_on_doubletaptimer_timeout"]
[connection signal="timeout" from="Dashtimer" to="." method="_on_dashtimer_timeout"]
[connection signal="timeout" from="DashCooldowntimer" to="." method="_on_dash_cooldowntimer_timeout"]
